--- a/html/components/component_input_text.html
+++ b/html/components/component_input_text.html
@@ -48,6 +48,10 @@
 	<!-- AOS -->
 	<link rel="stylesheet" type="text/css" href="../../resources/plugins/aos/3.0.0-beta.6/aos.css">
 	<script src="../../resources/plugins/aos/3.0.0-beta.6/aos.js"></script>
+	<!-- jquery-ui-monthpicker-master -->
+	<script src="../../resources/plugins/jquery-ui-monthpicker-master/monthpicker.js"></script>
+	<!-- jquery-touchSwipe -->
+	<script src="../../resources/plugins/jquery.touchswipe/1.6.19/jquery.touchSwipe.min.js"></script>
 	<!-- //[plugins] -->
 
 	<link rel="stylesheet" href="../../resources/css/ui-fonts.css">
@@ -218,6 +222,33 @@
 								<button type="button" class="btn-xsmall btn-outlined btn-round">+500만</button>
 								<button type="button" class="btn-xsmall btn-outlined btn-round">+1천만</button>
 								<button type="button" class="btn-xsmall btn-outlined btn-round">+5천만</button>
+							</div>
+						</div>
+					</dd>
+				</dl>
+				<dl>
+					<dt>inner label</dt>
+					<dd>
+						<div class="form">
+							<div class="label"></div>
+							<div class="input-wrap input-placeholder">
+								<div class="visible-placeholder">매월 같은 날</div>
+								<input type="number" class="ar" placeholder="1" aria-label="반복주기" style="padding-right:0;">
+								<div class="visible-placeholder">일에</div>
+							</div>
+						</div>
+					</dd>
+				</dl>
+				<dl>
+					<dt>inner label</dt>
+					<dd>
+						<div class="form">
+							<div class="label"></div>
+							<div class="input-wrap input-placeholder">
+								<input type="number" class="ar" placeholder="1" aria-label="주" style="padding-right:0;">
+								<div class="visible-placeholder">주마다</div>
+								<button type="button" class="text-button ar" data-placeholder="월"></button>
+								<div class="visible-placeholder">요일에 반복</div>
 							</div>
 						</div>
 					</dd>
