--- a/html/components/component_card.html
+++ b/html/components/component_card.html
@@ -288,6 +288,61 @@
 
 
 			</div>
+			<hr>
+
+			<div class="ui-guide-box">
+				<h2>Schedule Card</h2>
+
+				<div class="schedule-content">
+					<a href="#" class="schedule-list">
+						<div class="schedule-title">
+							<i class="icon-only icon-24 icon-birth bg-purple-600"></i>
+							<strong class="title-medium">홍길동 생일</strong>
+						</div>
+						<div class="schedule-content">
+							<div class="schedule-detail">
+								<i class="icon-only icon-16 icon-user bg-icon-gray_1"></i>
+								16842121654866
+							</div>
+						</div>
+					</a>
+
+
+
+					<a href="#" class="schedule-list">
+						<div class="schedule-title">
+							<i class="icon-only icon-24 icon-wallet bg-cyan-500"></i>
+							<strong class="title-medium">홍길동 수신만기</strong>
+                            <div class="schedule-content">
+                                <div class="schedule-detail">
+                                    <i class="icon-only icon-16 icon-won bg-black-88"></i>
+                                    1,000,000,000,000원
+                                </div>
+                            </div>
+						</div>
+					</a>
+
+
+					<a href="#" class="schedule-list">
+						<div class="schedule-title">
+							<i class="icon-only icon-24 icon-birth bg-purple-600"></i>
+							<strong class="title-medium">홍길동 생일</strong>
+						</div>
+						<div class="schedule-content">
+							<div class="schedule-detail">
+								<i class="icon-only icon-16 icon-user bg-icon-gray_1"></i>
+								16842121654866
+							</div>
+						</div>
+					</a>
+
+
+					<i class="icon-only icon-24 icon-calendar-repeat"></i>
+				</div>
+
+
+
+			</div>
 
 		</div>
 	</div>
