--- a/html/components/component_icon.html
+++ b/html/components/component_icon.html
@@ -110,6 +110,7 @@
 					<i class="icon-only icon-28 icon-info bg-icon-default"></i>
 					<i class="icon-only icon-24 icon-info bg-icon-default"></i>
 					<i class="icon-only icon-20 icon-info bg-icon-default"></i>
+					<i class="icon-only icon-16 icon-info bg-icon-default"></i>
 					<i class="icon-only icon-14 icon-info bg-icon-default"></i>
 					<i class="icon-only icon-12 icon-info bg-icon-default"></i>
 				</div>
@@ -124,6 +125,7 @@
 					<i class="icon-only icon-28 icon-caution bg-icon-gray_1"></i>
 					<i class="icon-only icon-24 icon-caution bg-icon-gray_1"></i>
 					<i class="icon-only icon-20 icon-caution bg-icon-gray_1"></i>
+					<i class="icon-only icon-16 icon-caution bg-icon-gray_1"></i>
 					<i class="icon-only icon-14 icon-caution bg-icon-gray_1"></i>
 					<i class="icon-only icon-12 icon-caution bg-icon-gray_1"></i>
 				</div>
@@ -138,6 +140,7 @@
 					<i class="icon-only icon-28 icon-camera bg-icon-gray_1"></i>
 					<i class="icon-only icon-24 icon-camera bg-icon-gray_1"></i>
 					<i class="icon-only icon-20 icon-camera bg-icon-gray_1"></i>
+					<i class="icon-only icon-16 icon-camera bg-icon-gray_1"></i>
 					<i class="icon-only icon-14 icon-camera bg-icon-gray_1"></i>
 					<i class="icon-only icon-12 icon-camera bg-icon-gray_1"></i>
 				</div>
@@ -152,6 +155,7 @@
 					<i class="icon-only icon-28 icon-phone bg-status-active"></i>
 					<i class="icon-only icon-24 icon-phone bg-status-active"></i>
 					<i class="icon-only icon-20 icon-phone bg-status-active"></i>
+					<i class="icon-only icon-16 icon-phone bg-status-active"></i>
 					<i class="icon-only icon-14 icon-phone bg-status-active"></i>
 					<i class="icon-only icon-12 icon-phone bg-status-active"></i>
 				</div>
@@ -166,6 +170,7 @@
 					<i class="icon-only icon-28 icon-sms bg-status-active"></i>
 					<i class="icon-only icon-24 icon-sms bg-status-active"></i>
 					<i class="icon-only icon-20 icon-sms bg-status-active"></i>
+					<i class="icon-only icon-16 icon-sms bg-status-active"></i>
 					<i class="icon-only icon-14 icon-sms bg-status-active"></i>
 					<i class="icon-only icon-12 icon-sms bg-status-active"></i>
 				</div>
@@ -180,6 +185,7 @@
 					<i class="icon-only icon-28 icon-mail bg-status-active"></i>
 					<i class="icon-only icon-24 icon-mail bg-status-active"></i>
 					<i class="icon-only icon-20 icon-mail bg-status-active"></i>
+					<i class="icon-only icon-16 icon-mail bg-status-active"></i>
 					<i class="icon-only icon-14 icon-mail bg-status-active"></i>
 					<i class="icon-only icon-12 icon-mail bg-status-active"></i>
 				</div>
@@ -194,6 +200,7 @@
 					<i class="icon-only icon-28 icon-call bg-status-active"></i>
 					<i class="icon-only icon-24 icon-call bg-status-active"></i>
 					<i class="icon-only icon-20 icon-call bg-status-active"></i>
+					<i class="icon-only icon-16 icon-call bg-status-active"></i>
 					<i class="icon-only icon-14 icon-call bg-status-active"></i>
 					<i class="icon-only icon-12 icon-call bg-status-active"></i>
 				</div>
@@ -208,6 +215,7 @@
 					<i class="icon-only icon-28 icon-memo bg-status-active"></i>
 					<i class="icon-only icon-24 icon-memo bg-status-active"></i>
 					<i class="icon-only icon-20 icon-memo bg-status-active"></i>
+					<i class="icon-only icon-16 icon-memo bg-status-active"></i>
 					<i class="icon-only icon-14 icon-memo bg-status-active"></i>
 					<i class="icon-only icon-12 icon-memo bg-status-active"></i>
 				</div>
@@ -222,6 +230,7 @@
 					<i class="icon-only icon-28 icon-locked bg-icon-gray_1"></i>
 					<i class="icon-only icon-24 icon-locked bg-icon-gray_1"></i>
 					<i class="icon-only icon-20 icon-locked bg-icon-gray_1"></i>
+					<i class="icon-only icon-16 icon-locked bg-icon-gray_1"></i>
 					<i class="icon-only icon-14 icon-locked bg-icon-gray_1"></i>
 					<i class="icon-only icon-12 icon-locked bg-icon-gray_1"></i>
 				</div>
@@ -236,6 +245,7 @@
 					<i class="icon-only icon-28 icon-fav"></i>
 					<i class="icon-only icon-24 icon-fav"></i>
 					<i class="icon-only icon-20 icon-fav"></i>
+					<i class="icon-only icon-16 icon-fav"></i>
 					<i class="icon-only icon-14 icon-fav"></i>
 					<i class="icon-only icon-12 icon-fav"></i>
 				</div>
@@ -250,6 +260,7 @@
 					<i class="icon-only icon-28 icon-fav-active"></i>
 					<i class="icon-only icon-24 icon-fav-active"></i>
 					<i class="icon-only icon-20 icon-fav-active"></i>
+					<i class="icon-only icon-16 icon-fav-active"></i>
 					<i class="icon-only icon-14 icon-fav-active"></i>
 					<i class="icon-only icon-12 icon-fav-active"></i>
 				</div>
@@ -264,6 +275,7 @@
 					<i class="icon-only icon-28 icon-fav-active2"></i>
 					<i class="icon-only icon-24 icon-fav-active2"></i>
 					<i class="icon-only icon-20 icon-fav-active2"></i>
+					<i class="icon-only icon-16 icon-fav-active2"></i>
 					<i class="icon-only icon-14 icon-fav-active2"></i>
 					<i class="icon-only icon-12 icon-fav-active2"></i>
 				</div>
@@ -278,6 +290,7 @@
 					<i class="icon-only icon-28 icon-noresult bg-icon-gray_1"></i>
 					<i class="icon-only icon-24 icon-noresult bg-icon-gray_1"></i>
 					<i class="icon-only icon-20 icon-noresult bg-icon-gray_1"></i>
+					<i class="icon-only icon-16 icon-noresult bg-icon-gray_1"></i>
 					<i class="icon-only icon-14 icon-noresult bg-icon-gray_1"></i>
 					<i class="icon-only icon-12 icon-noresult bg-icon-gray_1"></i>
 				</div>
@@ -292,6 +305,7 @@
 					<i class="icon-only icon-28 icon-won bg-black-88"></i>
 					<i class="icon-only icon-24 icon-won bg-black-88"></i>
 					<i class="icon-only icon-20 icon-won bg-black-88"></i>
+					<i class="icon-only icon-16 icon-won bg-black-88"></i>
 					<i class="icon-only icon-14 icon-won bg-black-88"></i>
 					<i class="icon-only icon-12 icon-won bg-black-88"></i>
 				</div>
@@ -306,6 +320,7 @@
 					<i class="icon-only icon-28 icon-percent bg-icon-default"></i>
 					<i class="icon-only icon-24 icon-percent bg-icon-default"></i>
 					<i class="icon-only icon-20 icon-percent bg-icon-default"></i>
+					<i class="icon-only icon-16 icon-percent bg-icon-default"></i>
 					<i class="icon-only icon-14 icon-percent bg-icon-default"></i>
 					<i class="icon-only icon-12 icon-percent bg-icon-default"></i>
 				</div>
@@ -320,6 +335,7 @@
 					<i class="icon-only icon-28 icon-calculator bg-icon-gray_1"></i>
 					<i class="icon-only icon-24 icon-calculator bg-icon-gray_1"></i>
 					<i class="icon-only icon-20 icon-calculator bg-icon-gray_1"></i>
+					<i class="icon-only icon-16 icon-calculator bg-icon-gray_1"></i>
 					<i class="icon-only icon-14 icon-calculator bg-icon-gray_1"></i>
 					<i class="icon-only icon-12 icon-calculator bg-icon-gray_1"></i>
 				</div>
@@ -334,6 +350,7 @@
 					<i class="icon-only icon-28 icon-caution bg-icon-gray_1"></i>
 					<i class="icon-only icon-24 icon-caution bg-icon-gray_1"></i>
 					<i class="icon-only icon-20 icon-caution bg-icon-gray_1"></i>
+					<i class="icon-only icon-16 icon-caution bg-icon-gray_1"></i>
 					<i class="icon-only icon-14 icon-caution bg-icon-gray_1"></i>
 					<i class="icon-only icon-12 icon-caution bg-icon-gray_1"></i>
 				</div>
@@ -348,6 +365,7 @@
 					<i class="icon-only icon-28 icon-close bg-icon-default"></i>
 					<i class="icon-only icon-24 icon-close bg-icon-default"></i>
 					<i class="icon-only icon-20 icon-close bg-icon-default"></i>
+					<i class="icon-only icon-16 icon-close bg-icon-default"></i>
 					<i class="icon-only icon-14 icon-close bg-icon-default"></i>
 					<i class="icon-only icon-12 icon-close bg-icon-default"></i>
 				</div>
@@ -362,8 +380,114 @@
 					<i class="icon-only icon-28 icon-nodata bg-icon-gray_2"></i>
 					<i class="icon-only icon-24 icon-nodata bg-icon-gray_2"></i>
 					<i class="icon-only icon-20 icon-nodata bg-icon-gray_2"></i>
+					<i class="icon-only icon-16 icon-nodata bg-icon-gray_2"></i>
 					<i class="icon-only icon-14 icon-nodata bg-icon-gray_2"></i>
 					<i class="icon-only icon-12 icon-nodata bg-icon-gray_2"></i>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-user</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-user bg-icon-gray_1"></i>
+					<i class="icon-only icon-36 icon-user bg-icon-gray_1"></i>
+					<i class="icon-only icon-32 icon-user bg-icon-gray_1"></i>
+					<i class="icon-only icon-28 icon-user bg-icon-gray_1"></i>
+					<i class="icon-only icon-24 icon-user bg-icon-gray_1"></i>
+					<i class="icon-only icon-20 icon-user bg-icon-gray_1"></i>
+					<i class="icon-only icon-16 icon-user bg-icon-gray_1"></i>
+					<i class="icon-only icon-14 icon-user bg-icon-gray_1"></i>
+					<i class="icon-only icon-12 icon-user bg-icon-gray_1"></i>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-time</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-time bg-icon-gray_1"></i>
+					<i class="icon-only icon-36 icon-time bg-icon-gray_1"></i>
+					<i class="icon-only icon-32 icon-time bg-icon-gray_1"></i>
+					<i class="icon-only icon-28 icon-time bg-icon-gray_1"></i>
+					<i class="icon-only icon-24 icon-time bg-icon-gray_1"></i>
+					<i class="icon-only icon-20 icon-time bg-icon-gray_1"></i>
+					<i class="icon-only icon-16 icon-time bg-icon-gray_1"></i>
+					<i class="icon-only icon-14 icon-time bg-icon-gray_1"></i>
+					<i class="icon-only icon-12 icon-time bg-icon-gray_1"></i>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-location</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-location bg-icon-gray_1"></i>
+					<i class="icon-only icon-36 icon-location bg-icon-gray_1"></i>
+					<i class="icon-only icon-32 icon-location bg-icon-gray_1"></i>
+					<i class="icon-only icon-28 icon-location bg-icon-gray_1"></i>
+					<i class="icon-only icon-24 icon-location bg-icon-gray_1"></i>
+					<i class="icon-only icon-20 icon-location bg-icon-gray_1"></i>
+					<i class="icon-only icon-16 icon-location bg-icon-gray_1"></i>
+					<i class="icon-only icon-14 icon-location bg-icon-gray_1"></i>
+					<i class="icon-only icon-12 icon-location bg-icon-gray_1"></i>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-birth</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-birth bg-purple-600"></i>
+					<i class="icon-only icon-36 icon-birth bg-purple-600"></i>
+					<i class="icon-only icon-32 icon-birth bg-purple-600"></i>
+					<i class="icon-only icon-28 icon-birth bg-purple-600"></i>
+					<i class="icon-only icon-24 icon-birth bg-purple-600"></i>
+					<i class="icon-only icon-20 icon-birth bg-purple-600"></i>
+					<i class="icon-only icon-16 icon-birth bg-purple-600"></i>
+					<i class="icon-only icon-14 icon-birth bg-purple-600"></i>
+					<i class="icon-only icon-12 icon-birth bg-purple-600"></i>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-wallet</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-wallet bg-cyan-500"></i>
+					<i class="icon-only icon-36 icon-wallet bg-cyan-500"></i>
+					<i class="icon-only icon-32 icon-wallet bg-cyan-500"></i>
+					<i class="icon-only icon-28 icon-wallet bg-cyan-500"></i>
+					<i class="icon-only icon-24 icon-wallet bg-cyan-500"></i>
+					<i class="icon-only icon-20 icon-wallet bg-cyan-500"></i>
+					<i class="icon-only icon-16 icon-wallet bg-cyan-500"></i>
+					<i class="icon-only icon-14 icon-wallet bg-cyan-500"></i>
+					<i class="icon-only icon-12 icon-wallet bg-cyan-500"></i>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-calendar</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-calendar bg-red-500"></i>
+					<i class="icon-only icon-36 icon-calendar bg-red-500"></i>
+					<i class="icon-only icon-32 icon-calendar bg-red-500"></i>
+					<i class="icon-only icon-28 icon-calendar bg-red-500"></i>
+					<i class="icon-only icon-24 icon-calendar bg-red-500"></i>
+					<i class="icon-only icon-20 icon-calendar bg-red-500"></i>
+					<i class="icon-only icon-16 icon-calendar bg-red-500"></i>
+					<i class="icon-only icon-14 icon-calendar bg-red-500"></i>
+					<i class="icon-only icon-12 icon-calendar bg-red-500"></i>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-calendar-repeat</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-calendar-repeat"></i>
+					<i class="icon-only icon-36 icon-calendar-repeat"></i>
+					<i class="icon-only icon-32 icon-calendar-repeat"></i>
+					<i class="icon-only icon-28 icon-calendar-repeat"></i>
+					<i class="icon-only icon-24 icon-calendar-repeat"></i>
+					<i class="icon-only icon-20 icon-calendar-repeat"></i>
+					<i class="icon-only icon-16 icon-calendar-repeat"></i>
+					<i class="icon-only icon-14 icon-calendar-repeat"></i>
+					<i class="icon-only icon-12 icon-calendar-repeat"></i>
 				</div>
 			</div>
 
