--- a/html/components/component_button.html
+++ b/html/components/component_button.html
@@ -126,7 +126,7 @@
 
 			<h2>CTA <span>Text</span></h2>
 			<div class="guide-column-list">
-				<a href="#" class="anchor chevron fs-16">레이블 Small</a>
+				<a href="#"  class="anchor chevron fs-16">레이블 Small</a>
 				<a href="#" class="anchor chevron fs-15">레이블 Xsmall</a>
 				<a href="#" class="anchor chevron chevron-up fs-15">접기</a>
 				<a href="#" class="anchor chevron chevron-down fs-15">더보기</a>
@@ -139,6 +139,9 @@
 			<h2>CTA <span>FAB</span></h2>
 			<div class="guide-column-list">
 				<button type="button" class="fab fab-primary fab-square" aria-label="더보기"><i class="ico-add"></i></button>
+				<button type="button" class="fab fab-primary fab-square" aria-label="일정 추가"><i class="ico-calendar"></i></button>
+				<button type="button" class="fab fab-secondary fab-square" aria-label="일정 검색"><i class="ico-schedule bg-brandPrimary-blue500"></i></button>
+
 				<button type="button" class="fab fab-secondary fab-circle" aria-label="최상단으로 이동"><i class="ico-gototop"></i></button>
 			</div>
 			<hr>
