--- a/html/components/component_input_checkbox.html
+++ b/html/components/component_input_checkbox.html
@@ -200,6 +200,36 @@
 				</dd>
 			</dl>
 		</div>
+		<div class="ui-guide-box">
+			<h2>Color Checkbox</h2>
+			<dl>
+				<dt>Red, Purple, Cyan</dt>
+				<dd>
+					<div class="inp-group">
+						<div class="inp inp-medium">
+							<label>
+								<input type="checkbox" class="type-red">
+								<span class="label-title">개인 일정</span>
+							</label>
+						</div>
+						<div class="inp inp-medium">
+							<label>
+								<input type="checkbox" class="type-purple">
+								<span class="label-title">고객 생일</span>
+							</label>
+						</div>
+						<div class="inp inp-medium">
+							<label>
+								<input type="checkbox" class="type-cyan">
+								<span class="label-title">수신 만기</span>
+							</label>
+						</div>
+					</div>
+				</dd>
+			</dl>
+		</div>
+
+
 	</div>
 </body>
 
