--- a/html/components/component_card.html
+++ b/html/components/component_card.html
@@ -291,18 +291,20 @@
 			<hr>
 
 			<div class="ui-guide-box">
-				<h2>Schedule Card</h2>
+				<h2>Schedule Section</h2>
 
-				<div class="schedule-content">
+				<div class="schedule-section">
 					<a href="#" class="schedule-list">
 						<div class="schedule-title">
-							<i class="icon-only icon-24 icon-birth bg-purple-600"></i>
+							<i class="icon-only icon-24 icon-birth bg-purple-600" aria-label="생일"></i>
 							<strong class="title-medium">홍길동 생일</strong>
 						</div>
 						<div class="schedule-content">
 							<div class="schedule-detail">
-								<i class="icon-only icon-16 icon-user bg-icon-gray_1"></i>
-								16842121654866
+								<div class="schedule-detail-inner">
+									<i class="icon-only icon-16 icon-user bg-icon-gray_1"></i>
+									16842121654866
+								</div>
 							</div>
 						</div>
 					</a>
@@ -311,33 +313,78 @@
 
 					<a href="#" class="schedule-list">
 						<div class="schedule-title">
-							<i class="icon-only icon-24 icon-wallet bg-cyan-500"></i>
+							<i class="icon-only icon-24 icon-wallet bg-cyan-500" aria-label="수신만기"></i>
 							<strong class="title-medium">홍길동 수신만기</strong>
-                            <div class="schedule-content">
-                                <div class="schedule-detail">
-                                    <i class="icon-only icon-16 icon-won bg-black-88"></i>
-                                    1,000,000,000,000원
-                                </div>
-                            </div>
+						</div>
+						<div class="schedule-content">
+							<div class="schedule-detail">
+								<div class="schedule-detail-inner">
+									<i class="icon-only icon-16 icon-won bg-black-88"></i>
+									1,000,000,000,000원
+								</div>
+							</div>
 						</div>
 					</a>
 
 
 					<a href="#" class="schedule-list">
 						<div class="schedule-title">
-							<i class="icon-only icon-24 icon-birth bg-purple-600"></i>
+							<i class="icon-only icon-24 icon-birth bg-purple-600" aria-label="생일"></i>
 							<strong class="title-medium">홍길동 생일</strong>
 						</div>
 						<div class="schedule-content">
 							<div class="schedule-detail">
-								<i class="icon-only icon-16 icon-user bg-icon-gray_1"></i>
-								16842121654866
+								<div class="schedule-detail-inner">
+									<i class="icon-only icon-16 icon-user bg-icon-gray_1"></i>
+									16842121654866
+								</div>
+							</div>
+						</div>
+					</a>
+
+					<a href="#" class="schedule-list">
+						<div class="schedule-title">
+							<i class="icon-only icon-24 icon-calendar" aria-label="개인일정"></i>
+							<strong class="title-medium">일정 제목이 길어질 경우에는 이렇게 노출됩니다.</strong>
+						</div>
+						<div class="schedule-content">
+							<div class="schedule-detail">
+								<div class="schedule-detail-inner fc-typography-body">
+									<i class="icon-only icon-16 icon-time bg-icon-gray_1"></i>
+									하루종일
+								</div>
+								<span class="division h12 mx10"></span>
+								<div class="schedule-detail-inner">
+									<i class="icon-only icon-16 icon-location bg-icon-gray_1"></i>
+									12층 3번 회의실
+								</div>
 							</div>
 						</div>
 					</a>
 
 
-					<i class="icon-only icon-24 icon-calendar-repeat"></i>
+					<a href="#" class="schedule-list">
+						<div class="schedule-title">
+							<i class="icon-only icon-24 icon-calendar-repeat" aria-title="개인일정 반복"></i>
+							<strong class="title-medium">일정 제목</strong>
+						</div>
+						<div class="schedule-content">
+							<div class="schedule-detail">
+								<div class="schedule-detail-inner">
+									<i class="icon-only icon-16 icon-time bg-icon-gray_1"></i>
+									오후 2:00 - 오후 4:30
+								</div>
+								<span class="division h12 mx10"></span>
+								<div class="schedule-detail-inner">
+									<i class="icon-only icon-16 icon-location bg-icon-gray_1"></i>
+									12층 3번 회의실
+								</div>
+							</div>
+						</div>
+					</a>
+
+
+
 				</div>
 
 
