--- a/resources/css/ui-default.css
+++ b/resources/css/ui-default.css
@@ -138,7 +138,6 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .gap30 {gap:30px!important;}
 
 .mtauto {margin-top:auto!important;}
-.mt-1 {margin-top:-1px!important;}
 .mt0 {margin-top:0px!important;}
 .mt2 {margin-top:2px!important;}
 .mt4 {margin-top:4px!important;}
@@ -230,7 +229,6 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .mr100 {margin-right:100px!important;}
 
 .mauto {margin:auto!important;}
-
 .m0 {margin:0px!important;}
 .m4 {margin:4px!important;}
 .m5 {margin:5px!important;}
@@ -292,6 +290,154 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .mx50 {margin-left:50px!important;margin-right:50px!important;}
 .mx70 {margin-left:70px!important;margin-right:70px!important;}
 .mx100 {margin-left:100px!important;margin-right:100px!important;}
+
+.mt-2 {margin-top:-2px!important;}
+.mt-4 {margin-top:-4px!important;}
+.mt-5 {margin-top:-5px!important;}
+.mt-8 {margin-top:-8px!important;}
+.mt-10 {margin-top:-10px!important;}
+.mt-12 {margin-top:-12px!important;}
+.mt-14 {margin-top:-14px!important;}
+.mt-15 {margin-top:-15px!important;}
+.mt-16 {margin-top:-16px!important;}
+.mt-20 {margin-top:-20px!important;}
+.mt-24 {margin-top:-24px!important;}
+.mt-25 {margin-top:-25px!important;}
+.mt-30 {margin-top:-30px!important;}
+.mt-32 {margin-top:-32px!important;}
+.mt-35 {margin-top:-35px!important;}
+.mt-40 {margin-top:-40px!important;}
+.mt-42 {margin-top:-42px!important;}
+.mt-45 {margin-top:-45px!important;}
+.mt-50 {margin-top:-50px!important;}
+.mt-70 {margin-top:-70px!important;}
+.mt-100 {margin-top:-100px!important;}
+
+.mb-2 {margin-bottom:-2px!important;}
+.mb-4 {margin-bottom:-4px!important;}
+.mb-5 {margin-bottom:-5px!important;}
+.mb-8 {margin-bottom:-8px!important;}
+.mb-10 {margin-bottom:-10px!important;}
+.mb-12 {margin-bottom:-12px!important;}
+.mb-14 {margin-bottom:-14px!important;}
+.mb-15 {margin-bottom:-15px!important;}
+.mb-16 {margin-bottom:-16px!important;}
+.mb-20 {margin-bottom:-20px!important;}
+.mb-24 {margin-bottom:-24px!important;}
+.mb-25 {margin-bottom:-25px!important;}
+.mb-30 {margin-bottom:-30px!important;}
+.mb-32 {margin-bottom:-32px!important;}
+.mb-35 {margin-bottom:-35px!important;}
+.mb-40 {margin-bottom:-40px!important;}
+.mb-45 {margin-bottom:-45px!important;}
+.mb-50 {margin-bottom:-50px!important;}
+.mb-70 {margin-bottom:-70px!important;}
+.mb-100 {margin-bottom:-100px!important;}
+
+.mlauto {margin-left:auto!important;}
+.ml0 {margin-left:0px!important;}
+.ml2 {margin-left:2px!important;}
+.ml4 {margin-left:4px!important;}
+.ml5 {margin-left:5px!important;}
+.ml8 {margin-left:8px!important;}
+.ml10 {margin-left:10px!important;}
+.ml12 {margin-left:12px!important;}
+.ml15 {margin-left:15px!important;}
+.ml16 {margin-left:16px!important;}
+.ml20 {margin-left:20px!important;}
+.ml24 {margin-left:24px!important;}
+.ml25 {margin-left:25px!important;}
+.ml30 {margin-left:30px!important;}
+.ml32 {margin-left:32px!important;}
+.ml35 {margin-left:35px!important;}
+.ml40 {margin-left:40px!important;}
+.ml45 {margin-left:45px!important;}
+.ml50 {margin-left:50px!important;}
+.ml70 {margin-left:70px!important;}
+.ml100 {margin-left:100px!important;}
+
+.ml-2 {margin-left:-2px!important;}
+.ml-4 {margin-left:-4px!important;}
+.ml-5 {margin-left:-5px!important;}
+.ml-8 {margin-left:-8px!important;}
+.ml-10 {margin-left:-10px!important;}
+.ml-12 {margin-left:-12px!important;}
+.ml-15 {margin-left:-15px!important;}
+.ml-16 {margin-left:-16px!important;}
+.ml-20 {margin-left:-20px!important;}
+.ml-24 {margin-left:-24px!important;}
+.ml-25 {margin-left:-25px!important;}
+.ml-30 {margin-left:-30px!important;}
+.ml-32 {margin-left:-32px!important;}
+.ml-35 {margin-left:-35px!important;}
+.ml-40 {margin-left:-40px!important;}
+.ml-45 {margin-left:-45px!important;}
+.ml-50 {margin-left:-50px!important;}
+.ml-70 {margin-left:-70px!important;}
+.ml-100 {margin-left:-100px!important;}
+
+.mrauto {margin-right:auto!important;}
+.mr0 {margin-right:0px!important;}
+.mr2 {margin-right:2px!important;}
+.mr4 {margin-right:4px!important;}
+.mr5 {margin-right:5px!important;}
+.mr8 {margin-right:8px!important;}
+.mr10 {margin-right:10px!important;}
+.mr12 {margin-right:12px!important;}
+.mr15 {margin-right:15px!important;}
+.mr16 {margin-right:16px!important;}
+.mr20 {margin-right:20px!important;}
+.mr24 {margin-right:24px!important;}
+.mr25 {margin-right:25px!important;}
+.mr30 {margin-right:30px!important;}
+.mr32 {margin-right:32px!important;}
+.mr35 {margin-right:35px!important;}
+.mr40 {margin-right:40px!important;}
+.mr45 {margin-right:45px!important;}
+.mr50 {margin-right:50px!important;}
+.mr70 {margin-right:70px!important;}
+.mr100 {margin-right:100px!important;}
+
+.mr-2 {margin-right:-2px!important;}
+.mr-4 {margin-right:-4px!important;}
+.mr-5 {margin-right:-5px!important;}
+.mr-8 {margin-right:-8px!important;}
+.mr-10 {margin-right:-10px!important;}
+.mr-12 {margin-right:-12px!important;}
+.mr-15 {margin-right:-15px!important;}
+.mr-16 {margin-right:-16px!important;}
+.mr-20 {margin-right:-20px!important;}
+.mr-24 {margin-right:-24px!important;}
+.mr-25 {margin-right:-25px!important;}
+.mr-30 {margin-right:-30px!important;}
+.mr-32 {margin-right:-32px!important;}
+.mr-35 {margin-right:-35px!important;}
+.mr-40 {margin-right:-40px!important;}
+.mr-45 {margin-right:-45px!important;}
+.mr-50 {margin-right:-50px!important;}
+.mr-70 {margin-right:-70px!important;}
+.mr-100 {margin-right:-100px!important;}
+
+.my-0 {margin-top:-0px!important;margin-bottom:-0px!important;}
+.my-4 {margin-top:-4px!important;margin-bottom:-4px!important;}
+.my-5 {margin-top:-5px!important;margin-bottom:-5px!important;}
+.my-8 {margin-top:-8px!important;margin-bottom:-8px!important;}
+.my-10 {margin-top:-10px!important;margin-bottom:-10px!important;}
+.my-12 {margin-top:-12px!important;margin-bottom:-12px!important;}
+.my-13 {margin-top:-13px!important;margin-bottom:-13px!important;}
+.my-15 {margin-top:-15px!important;margin-bottom:-15px!important;}
+.my-16 {margin-top:-16px!important;margin-bottom:-16px!important;}
+.my-20 {margin-top:-20px!important;margin-bottom:-20px!important;}
+.my-24 {margin-top:-24px!important;margin-bottom:-24px!important;}
+.my-25 {margin-top:-25px!important;margin-bottom:-25px!important;}
+.my-30 {margin-top:-30px!important;margin-bottom:-30px!important;}
+.my-32 {margin-top:-32px!important;margin-bottom:-32px!important;}
+.my-35 {margin-top:-35px!important;margin-bottom:-35px!important;}
+.my-40 {margin-top:-40px!important;margin-bottom:-40px!important;}
+.my-45 {margin-top:-45px!important;margin-bottom:-45px!important;}
+.my-50 {margin-top:-50px!important;margin-bottom:-50px!important;}
+.my-70 {margin-top:-70px!important;margin-bottom:-70px!important;}
+.my-100 {margin-top:-100px!important;margin-bottom:-100px!important;}
 
 .mx-0 {margin-left:-0px!important;margin-right:-0px!important;}
 .mx-4 {margin-left:-4px!important;margin-right:-4px!important;}
